# pinenote-service

./: CHANGELOG.md  Cargo.toml  README.md
packaging/archlinux/: .SRCINFO  PKGBUILD
packaging/resources/: org.pinenote.PineNoteCtl.service  pinenote.service
scripts/sway/: ebcmark.sh
src/: dbus.rs  lib.rs  main.rs  pixel_manager.rs
src/bridge/: quill_niri.rs  sway.rs
src/bridge/sway/: utils.rs
src/dbus/: pinenotectl.rs
src/dbus/pinenotectl/: ebc1.rs  hintmgr1.rs
src/drivers/drm/: rockchip_ebc.rs
src/ebc/: command.rs  ctl.rs
src/ioctls/drm/: rockchip_ebc.rs
src/sysfs/: attribute.rs
src/types/: rect.rs  rockchip_ebc.rs  ztree.rs
